--- a/MigradorVR/config.conf
+++ b/MigradorVR/config.conf
@@ -1,4 +1,21 @@
-host=localhost
-dbuser=postgres
-port=5432
-password=123
+[PgDatabase]
+# Configuração do banco PostgreSQL
+pgdbhost=127.0.0.1 
+pgdbuser=postgres
+pgdbport=5432
+pgdbpwd=123
+
+
+[Produtos]
+# Config para especificar se quer importar quantidades ou não
+importa_quantidade=true
+# Caso a importação o cliente usar balança, ativa essa opção
+# assim tudo que for quilo, será ativo para balança
+importa_balanca=false
+mostra_inativos=false
+
+[Clientes]
+mostra_inativos=false
+
+[Fornecedores]
+mostra_inativos=false
